[package]
name = "rust-picotcp-demo"
version = "0.0.1"
authors = [ "Maxime Vincent <maxime.vince@gmail.com>" ]
build = "./build_picotcp.sh"

[[bin]]
name = "rust-picotcp-demo"

[dependencies.picotcp]
git = "file:///home/vinz/TASS/PicoTCP/rust-picotcp"



#//git = "https://github.com/maximevince/rust-picotcp.git"
