[package]
name = "rust-picotcp-demo"
version = "0.0.1"
authors = [ "Maxime Vincent <maxime.vince@gmail.com>" ]
build = "./build_picotcp.sh"

[profile.dev]
debug=true
opt-level=0

[[bin]]
name = "rust-picotcp-demo"

[dependencies.picotcp]
//git = "https://github.com/maximevince/rust-picotcp.git"

git="file:///home/dan/rust-picotcp"

