[package]
name = "rust-picotcp-demo"
version = "0.0.1"
authors = [ "Maxime Vincent <maxime.vince@gmail.com>" ]
build = "./build_picotcp.sh"

[profile.dev]
debug=true
opt-level=0

[[bin]]
name = "rust-picotcp-demo"

[[bin]]
name = "rust-picotcp-echo"

[[bin]]
name = "rust-picotcp-dhcpd"

[dependencies.picotcp]
git = "https://github.com/maximevince/rust-picotcp.git"

//git="file:///home/dan/rust-picotcp"

